Fix quick cart and menu issue on mobile [BM-211]

--- a/app/design/frontend/Milan/Rutavity/web/css/source/_navigation.less
+++ b/app/design/frontend/Milan/Rutavity/web/css/source/_navigation.less
@@ -102,6 +102,13 @@
                 }
             }
         }
+
+        .level0.active,
+        .level0.has-active {
+            & > a:not(.ui-state-active) {
+                background: #FFFFFF !important;
+            }
+        }
     }
 
     .nav-sections {
