--- a/app/design/frontend/Milan/Rutavity/web/css/source/_wagento.less
+++ b/app/design/frontend/Milan/Rutavity/web/css/source/_wagento.less
@@ -727,4 +727,8 @@
             }
         }
     }
+
+    .header .quickcart-wrapper .block-quickcart {
+        height: ~'calc(100% - 65px)';
+    }
 }
